src/objects/Twilio_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_SID__c</fullName>
        <label>Account SID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_Token__c</fullName>
        <label>Auth Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>From_Phone_Number__c</fullName>
        <label>From Phone Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Account_SID__c</fullName>
        <label>Test Account SID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Auth_Token__c</fullName>
        <label>Test Auth Token</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Twilio Configuration</label>
</CustomObject>